<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="VCB Linker: " />

                    <CheckBox
                        android:id="@+id/chkLinkAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <RadioButton
                        android:id="@+id/radio_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LINK" />

                    <RadioButton
                        android:id="@+id/radio_unlink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UNLINK" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Link card: " />

                        <CheckBox
                            android:id="@+id/chkLinkCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Wallet transfer: " />

                        <CheckBox
                            android:id="@+id/chkTransfer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Withdraw: " />

                        <CheckBox
                            android:id="@+id/chkWithDraw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="App ID" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextAppID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="User Zalo ID: " />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextZaloUserID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1671417175338866297" />
                <!--1671417175338866297  7040082858573111800   8603984916740465452 7040082858573111800 8267894003753827574 8556823231627672308-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonGetAccessToken"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Get" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextAccessToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Click to get new Access Token" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="App User:" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="160829000002502" />
                <!--160515000010001 160525000002509   160516000000501 160608000000002 7040082858573111800 160613000001001-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewIName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Item name:" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextIName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Thanh Toán hóa đơn tiền điện" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Price:" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20000" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Description:" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kim Nguyên Bảo để nâng cấp level" />
            </LinearLayout>


            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:text="PAY NOW" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>