<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/framelayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/zpw_bg_top_bottom_side_border">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout_localcard_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/sdk_card_number_hint"
        android:tag="@string/sdk_card_number_hint"
        android:theme="@style/TextLabelHint">

        <vn.com.zalopay.wallet.view.custom.VPaymentDrawableEditText
            android:id="@+id/edittext_localcard_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bottom_default_style"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="number"
            android:longClickable="false"
            android:maxLength="@integer/maximum_character_field_card_number"
            android:maxLines="1"
            android:paddingBottom="@dimen/zpw_edittext_padding_bottom"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:paddingTop="@dimen/zpw_edittext_padding_top"
            android:textSize="@dimen/sdk_form_input_card_number_size" />
    </android.support.design.widget.TextInputLayout>

</FrameLayout>